--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="borda"><input type="submit" value="4" class="borda" onclick="adicionar('4')"></div>
 			<div class="borda"><input type="submit" value="5" class="borda" onclick="adicionar('5')"></div>
 			<div class="borda"><input type="submit" value="6" class="borda" onclick="adicionar('6')"></div>
-			<div class="borda"><input type="submit" value="7" class="borda" onclick="adicionar('7')"></div>
+			<div class="borda"><input type="submit" value="+" class="borda" onclick="adicionar('7')"></div>
 		</div>
 		<div class="item5">
 			<div class="borda"><input type="submit" value="1" class="borda" onclick="adicionar('1')"></div>
